LPD-78240 portal-search: Add back in Dev FF for vertex AI
https://liferay.atlassian.net/browse/LPD-78240